--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,7 +12,7 @@
 }
 
 :root {
-  --color-bg: #1f1f38;
+  --color-bg:  #28284f;
   --color-bg-variant: #28284f;
   --color-primary: #007bff;
   /* Blue */
@@ -45,7 +45,6 @@ body {
 }
 
 
-/* ============ GENERAL STYLES ============ */
 
 .container {
   width: var(--container-width-lg);
@@ -97,7 +96,7 @@ section>h2 {
 }
 
 .btn-primary {
-  background-color: var(--color-primary);
+  background-color: rgba(0, 0, 0, 0.55);;
   color: var(--color-white);
 }
 
@@ -112,7 +111,7 @@ section>h2 {
   color: var(--color-white);
 }
 
-/* Additional styles for hover/focus effects */
+
 .btn:hover,
 .btn:focus {
   opacity: 0.8;
@@ -144,7 +143,7 @@ img {
 
 
 
-/* ============ MEDIA QUERIES (MEDIUM DEVICES) ============ */
+
 
 @media screen and (max-width: 1024px) {
   .container {
