adding first game (Memory Game)

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -323,6 +323,14 @@ img {
 
 /* ============ COMPONENTS ============ */
 
+.card-grid{
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 20px;
+}
+
+
 
 /* ============ Spinner ============ */
 
@@ -350,3 +358,4 @@ img {
     transform: rotate(360deg);
   }
 }
+
